[gd_scene load_steps=40 format=2]

[ext_resource path="res://Dragon/PNG/191x161/flying_dragon-red.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Dragon.gd" type="Script" id=2]
[ext_resource path="res://Level/small_obstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ObstacleRoot.gd" type="Script" id=4]
[ext_resource path="res://Level/big_obstacle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dragon/Audio/JumpLong.wav" type="AudioStream" id=6]
[ext_resource path="res://Dragon/Audio/small_impact.wav" type="AudioStream" id=7]
[ext_resource path="res://Level/coluds_small.png" type="Texture" id=8]
[ext_resource path="res://Level/clouds_back_layer1.png" type="Texture" id=9]
[ext_resource path="res://Level/trees.png" type="Texture" id=10]
[ext_resource path="res://Level/mountains.png" type="Texture" id=11]
[ext_resource path="res://Level/ParallaxLayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/ParallaxBackground.gd" type="Script" id=13]
[ext_resource path="res://Scenes/HiddenText.gd" type="Script" id=14]
[ext_resource path="res://Level/FadeOnStart.gd" type="Script" id=15]
[ext_resource path="res://UIAnimations/SpaceAtlas.png" type="Texture" id=16]
[ext_resource path="res://UIAnimations/KongText.tres" type="Theme" id=17]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec2 offset;
void fragment(){
	vec4 tex = texture(TEXTURE, UV + offset);
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/offset = null

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/offset = null

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/offset = null

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/offset = null

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/offset = null

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 191, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 382, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 191, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 382, 161, 191, 161 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 191, 161, 191, 161 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "flap",
"speed": 15.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.217
height = 57.5523

[sub_resource type="CanvasItemMaterial" id=6]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 9, 164.777, 152, 118.223 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.863128, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.449219, 0, 0, 0 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.902235, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0, 0, 0, 0.823529 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 16 )
region = Rect2( 50, 26, 152, 42 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 16 )
region = Rect2( 50, 130, 152, 28 )

[node name="World" type="Node2D"]

[node name="ParallaxBackground" type="Node2D" parent="."]
position = Vector2( 480, 270 )
script = ExtResource( 13 )
scroll_speed = 0.2

[node name="Sprite_00" parent="ParallaxBackground" instance=ExtResource( 12 )]
material = SubResource( 11 )

[node name="Sprite_02" parent="ParallaxBackground" instance=ExtResource( 12 )]
material = SubResource( 12 )
texture = ExtResource( 9 )

[node name="Sprite_03" parent="ParallaxBackground" instance=ExtResource( 12 )]
material = SubResource( 13 )
texture = ExtResource( 11 )

[node name="Sprite_05" parent="ParallaxBackground" instance=ExtResource( 12 )]
material = SubResource( 14 )
texture = ExtResource( 10 )

[node name="Sprite_08" parent="ParallaxBackground" instance=ExtResource( 12 )]
material = SubResource( 15 )
texture = ExtResource( 8 )

[node name="ObstacleRoot" type="Node2D" parent="."]
position = Vector2( 1024, 270 )
script = ExtResource( 4 )
small_obstacle_tscn = ExtResource( 3 )
big_obstacle_tscn = ExtResource( 5 )
base_msec_to_next_obstacle = 2000
msec_reduction_per_step = 100
msec_minimum = 1000
start_velocity = Vector2( -228, 0 )
acceleration_step = Vector2( -64, 0 )
max_v_separation = 256
min_v_separation = 96
levels_to_min_v_separation = 10
max_v_position = 160
min_v_position = -160
max_v_step = 96

[node name="Dragon" type="KinematicBody2D" parent="."]
position = Vector2( 136, 283 )
collision_mask = 2
script = ExtResource( 2 )
_max_fall_speed = 1200
_max_fall_anim_frame = 700
_msec_to_next_flap = 125
_msec_max_glide_time = 2500
_fall_frame_count = 3
_flap_force = -500.0
_glide_gravity = 750.0
_gravity = 2000.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Dragon"]
frames = SubResource( 4 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dragon"]
position = Vector2( 14, 9 )
rotation = 1.56476
shape = SubResource( 5 )

[node name="FlapPlayer" type="AudioStreamPlayer" parent="Dragon"]
stream = ExtResource( 6 )

[node name="DeathPlayer" type="AudioStreamPlayer" parent="Dragon"]
stream = ExtResource( 7 )
volume_db = 1.748
pitch_scale = 0.93

[node name="DeathParticles" type="CPUParticles2D" parent="Dragon"]
material = SubResource( 6 )
emitting = false
amount = 32
one_shot = true
explosiveness = 0.9
texture = SubResource( 7 )
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2( 0, 128 )
initial_velocity = 275.23
angular_velocity = 128.0
angular_velocity_random = 1.0
scale_amount = 1.5
color_ramp = SubResource( 8 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="BloodParticles" type="CPUParticles2D" parent="Dragon"]
emitting = false
amount = 32
one_shot = true
explosiveness = 0.81
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2( 0, 128 )
initial_velocity = 215.6
scale_amount = 15.0
color = Color( 0.52549, 0, 0, 1 )
color_ramp = SubResource( 9 )
hue_variation = 0.02
hue_variation_random = 1.0

[node name="PlayPanel" type="Panel" parent="."]
margin_left = 248.0
margin_top = 216.0
margin_right = 712.0
margin_bottom = 377.0
custom_styles/panel = SubResource( 42 )
script = ExtResource( 15 )

[node name="CenterContainer" type="CenterContainer" parent="PlayPanel"]
margin_right = 464.0
margin_bottom = 161.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayPanel/CenterContainer"]
margin_left = 60.0
margin_top = 40.0
margin_right = 404.0
margin_bottom = 121.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayPanel/CenterContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 81.0
alignment = 1

[node name="Label" type="Label" parent="PlayPanel/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 35.0
theme = ExtResource( 17 )
text = "Press
"
align = 1

[node name="TextureRect3" type="TextureRect" parent="PlayPanel/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 152.0
margin_bottom = 81.0
texture = SubResource( 47 )
stretch_mode = 4

[node name="Label2" type="Label" parent="PlayPanel/CenterContainer/HBoxContainer"]
margin_left = 156.0
margin_top = 23.0
margin_right = 188.0
margin_bottom = 58.0
theme = ExtResource( 17 )
text = "
>>"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PlayPanel/CenterContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 344.0
margin_bottom = 81.0
alignment = 1

[node name="Label" type="Label" parent="PlayPanel/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 7.0
margin_right = 152.0
margin_bottom = 42.0
theme = ExtResource( 17 )
text = "Hold
"
align = 1

[node name="TextureRect4" type="TextureRect" parent="PlayPanel/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 46.0
margin_right = 152.0
margin_bottom = 74.0
texture = SubResource( 48 )
stretch_mode = 4

[node name="ResetPanel" type="Panel" parent="."]
margin_left = 248.0
margin_top = 216.0
margin_right = 712.0
margin_bottom = 377.0
custom_styles/panel = SubResource( 42 )
script = ExtResource( 15 )
signal_target = "player_died"
in_or_out = false

[node name="VBoxContainer" type="VBoxContainer" parent="ResetPanel"]
margin_left = 156.0
margin_top = 52.0
margin_right = 308.0
margin_bottom = 151.0

[node name="Label" type="Label" parent="ResetPanel/VBoxContainer"]
margin_right = 176.0
margin_bottom = 16.0
theme = ExtResource( 17 )
text = "Press"
align = 1

[node name="TextureRect" type="TextureRect" parent="ResetPanel/VBoxContainer"]
margin_top = 20.0
margin_right = 176.0
margin_bottom = 62.0
texture = SubResource( 47 )
stretch_mode = 4

[node name="Label2" type="Label" parent="ResetPanel/VBoxContainer"]
modulate = Color( 0, 0, 0, 0 )
margin_top = 66.0
margin_right = 176.0
margin_bottom = 101.0
theme = ExtResource( 17 )
text = "
dragonrider"
align = 1
script = ExtResource( 14 )
end_color = Color( 0.133333, 0.0352941, 0.152941, 1 )
